[metadata]
name = enclosed
description = Create the skeleton for a python package/project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/enclosed
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    enclosed = enclosed.__main__:main
